适配: JDK8 不支持 Stream.toList()，改为 Collectors.toList()